# travelthai

./: .gitignore  pyproject.toml  test.db
scripts/: run-api-dev
tests/: test_registration.py
travelthai/: auth.py  database.py  main.py  models.py  schemas.py
travelthai/core/: config.py  dependencie.py  security.py
travelthai/model/: __init__.py  schemas.py  travel.py
travelthai/router/: __init__.py  travel.py
travelthai/schemas/: schema.py
